--- a/dashboard.html
+++ b/dashboard.html
@@ -12,6 +12,10 @@
 
         <h3 id="welcome-message" class="text-center mt-3"></h3>
 
+        <div class="border border-dark rounded-5 text-right mt-3 p-3 position-absolute" style="top: 20px; right: 20px;">
+            <h4>Points: <span id="player-points">0</span></h4>
+        </div>
+
         <div class="card mt-3 p-3" id="game-details">
             <h3>Upcoming Game Details</h3>
             <p id="game-name"><strong>Game Name:</strong> <span></span></p>
@@ -21,6 +25,7 @@
             <p id="match-time"><strong>Match Time:</strong> <span></span></p>
             <p id="entry-fees"><strong>Entry Fees:</strong> <span></span></p>
             <p id="prize-pool"><strong>Prize Pool:</strong> <span></span></p>
+            <a href="https://forms.gle/vrRCWuix8yCQCGYc7" class="btn btn-primary" role="button">Join</a>
         </div>
         
         <div class="card mt-3 p-3" id="game-details-2">
@@ -32,8 +37,8 @@
             <p id="match-time-2"><strong>Match Time:</strong> <span></span></p>
             <p id="entry-fees-2"><strong>Entry Fees:</strong> <span></span></p>
             <p id="prize-pool-2"><strong>Prize Pool:</strong> <span></span></p>
+            <a href="https://forms.gle/vrRCWuix8yCQCGYc7" class="btn btn-primary" role="button">Join</a>
         </div>
-    </div>
     </div>
 
     <script type="module">
